--- a/staff.html
+++ b/staff.html
@@ -23,7 +23,9 @@
 <!-- Body  -->
 <div class="Staff">
     <div class="topStaff" style="flex-grow: 1; padding: 20px;">
-        <h1>This is our team here at Spaghetti Code</h1>
+        <h1>This is our team here at Spaghetti Code</h1><br>
+        <h2>Here at Spaghetti code we design games for you, the fans.<br>
+            Our team knows that no matter what at the end of the day the person who will recieve and ultimately review and enjoy our games are the fans, so thats why we design with you in mind and not other corporate shells who want to try to tamper with games and game dev companies reputations for the possibility of a bigger pay.</h2>
         <div class="nav" style="flex-grow: 8; padding: 20px;"></div>
     </div>
     <div class="bottomStaff">
@@ -35,11 +37,12 @@
                 <h1>Larry Rivida - Lead Games Designer</h1>
                 <h3>Larry Rivida is our Lead Games Designer and the powerhouse of the team, this man really loves to code, and loves seeing everyones comments on the games as it helps him grow and produce better content</h3>
             </div>
+            </br>
             <div class="columnStaff">
                 <h2>Contact Details</h2>
-                <h3>Email:</h3>
-                <h3>Phone Number:</h3>
-                <h3>Address:</h3>
+                <h3>Email: <a href="Larry.Rivada@spaghetti.com">Larry.Rivada@spaghetti.com</a></h3>
+                <h3>Phone Number: <a href="tel:+643115552368">(311) 555-2368</a></h3>
+                <h3>Address: <a>21 Cross Road, Flagstaff, Hamilton, 3206</a></h3>
             </div>
         </div>
         <div class="mainStaff">
@@ -48,13 +51,14 @@
         <div class="sideStaff">
             <div class="columnStaff">
                 <h1>Paul Allen - AI Programmer</h1>
-                <h3>Larry Rivida is our Lead Games Designer and the powerhouse of the team, this man really loves to code, and loves seeing everyones comments on the games as it helps him grow and produce better content</h3>
+                <h3>Paul is our AI Programmer and is quite good at it! He can program almost any type of AI and continues to improve constantly</h3>
             </div>
+            </br>
             <div class="columnStaff">
                 <h2>Contact Details</h2>
-                <h3>Email:</h3>
-                <h3>Phone Number:</h3>
-                <h3>Address:</h3>
+                <h3>Email: <a href="Paul.Allen@spaghetti.com">Paul.Allen@spaghetti.com</a><br></h3>
+                    <h3>Phone Number: <a href="tel:+643116261811">(311) 626-1811</a></h3>
+                        <h3>Address: <a>95 Hillpark Drive, Pokeno, Auckland, 2402</a></h3>
             </div>
         </div>
         <div class="mainStaff">
@@ -63,13 +67,14 @@
         <div class="sideStaff">
             <div class="columnStaff">
                 <h1>Trent Maunsell-Beanland -  Environment Artist</h1>
-                <h3>Larry Rivida is our Lead Games Designer and the powerhouse of the team, this man really loves to code, and loves seeing everyones comments on the games as it helps him grow and produce better content</h3>
+                <h3>Trent is our Environment Artist and can produce magical and insane environments for our games to take place on, and doesnt skimp out on minor details or realism</h3>
             </div>
+            </br>
             <div class="columnStaff">
                 <h2>Contact Details</h2>
-                <h3>Email:</h3>
-                <h3>Phone Number:</h3>
-                <h3>Address:</h3>
+                <h3>Email: <a href="Trent.Maunsell-Beanland@spaghetti.com">Trent.Maunsell-Beanland@spaghetti.com</a><br></h3>
+                    <h3>Phone Number: <a href="tel:+643105434357">(310) 543-4357</a><br></h3>
+                        <h3>Address: <a>33 Kahikatea Drive, Melville, Hamilton, 3206</a></h3>
             </div>
         </div>
     </div>
