added dropdown for billing form

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </p>
         </div>
 
-        <div class="sec" id="sec">
+        <div class="sec" id="secs">
             <h2>Main Body</h2>
             <p>
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
