--- a/staff.html
+++ b/staff.html
@@ -84,47 +84,60 @@
 <!--</div>-->
 </br>
     <div class="staffRow">
-        <div class="staffColumn">
-            <div class="staffCard">
-                <img src="/assets/JeffKaplan.jpg" alt="JeffKaplan" class="StaffContactImages">
-                <div class="staffContainer">
-                    <h2>Larry Rivida</h2>
-                    <p class="staffTitle">Lead Games Designer</p>
-                    <p>Larry is hardworking and loves to code</p>
-                    <p>Larry.Rivada@spaghetti.com</p>
-                    <p><button class="staffButton">Contact</button></p>
+            <div class="staffColumn">
+                <div class="staffCard">
+                    <img src="/assets/JeffKaplan.jpg" alt="JeffKaplan" style="width:100%">
+                    <div class="staffContainer">
+                        <h2>Larry Rivida</h2>
+                        <p class="staffTitle">Lead Games Designer</p>
+                        </br>
+                        <p>Larry is our best coder and loves to code
+                        </p>
+                        </br>
+                        <p>Larry.Rivada@spaghetti.com</p>
+                        <p><button class="staffButton">Contact</button></p>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
-    <div class="staffRow">
-        <div class="staffColumn">
-            <div class="staffCard">
-                <img src="/assets/DripKaplan.jpg" alt="DripKaplan" class="StaffContactImages">
-                <div class="staffContainer">
-                    <h2>Paul Allen</h2>
-                    <p class="staffTitle">AI Programmer</p>
-                    <p>Paul creates amazing and very in-depth AI for our games</p>
-                    <p>Paul.Allen@spaghetti.com</p>
-                    <p><button class="staffButton">Contact</button></p>
+
+            <div class="staffColumn">
+                <div class="staffCard">
+                        <img src="/assets/DripKaplan.jpg" alt="DripKaplan" style="width:100%">
+                    <div class="staffContainer">
+                        <h2>Paul Allen</h2>
+                        <p class="staffTitle">AI Programmer</p>
+                        </br>
+                        <p>Paul creates amazing and very in-depth AI for our games
+                        </p>
+                        </br>
+                        <p>Paul.Allen@spaghetti.com</p>
+    <!--                    <p><a href="Paul.Allen@spaghetti.com">Paul.Allen@spaghetti.com</a></p>-->
+    <!--                    <p><a href="tel:+643116261811">(311) 626-1811</a><br></p>-->
+    <!--                    <p><a>95 Hillpark Drive, Pokeno, Auckland, 2402</a></p>-->
+                        </br>
+                        <p><button class="staffButton">Contact</button></p>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
-    <div class="staffRow">
-        <div class="staffColumn">
-            <div class="staffCard">
-                <img src="/assets/Gaben.jpg" alt="Gaben" class="StaffContactImages">
-                <div class="staffContainer">
-                    <h2>Trent Maunsell-Beanland</h2>
-                    <p class="staffTitle">Environment Artist</p>
-                    <p>Trent puts together outstanding environments for our games</p>
-                    <p>Trent.Maunsell-Beanland@spaghetti.com</p>
-                    <p></p>
-                    <p><button class="staffButton">Contact</button></p>
+
+            <div class="staffColumn">
+                <div class="staffCard">
+                    <img src="/assets/Gaben.jpg" alt="Gaben" class="StaffContactImages">
+                    <div class="staffContainer">
+                        <h2>Trent Maunsell-Beanland</h2>
+                        <p class="staffTitle">Environment Artist</p>
+                        </br>
+                        <p>Trent puts together outstanding environments for our games
+                        </p>
+                        </br>
+                        <p><a href="Trent.Maunsell-Beanland@spaghetti.com">Trent.Maunsell-Beanland@spaghetti.com</a></p>
+                        <p><a href="tel:+643105434357">(310) 543-4357</a><br></p>
+                        <p><a>33 Kahikatea Drive, Melville, Hamilton, 3206</a></p>
+                        <p></p>
+                        <p><button class="staffButton">Contact</button></p>
+                    </div>
                 </div>
             </div>
-        </div>
     </div>
 </div>
 </br>
