Revamped contact, staff and added to the about page

--- a/staff.html
+++ b/staff.html
@@ -23,6 +23,7 @@
 <!-- Body  -->
 <div class="Staff">
     <div class="topStaff" style="flex-grow: 1; padding: 20px;">
+        </br>
         <h1>This is our team here at Spaghetti Code</h1><br>
         <h3>Here at Spaghetti code we design games for you, the fans.<br>
             Our team knows that no matter what at the end of the day the person who will recieve and ultimately review and enjoy our games are the fans, so thats why we design with you in mind and not other corporate shells who want to try to tamper with games and game dev companies reputations for the possibility of a bigger pay.</h3>
@@ -84,60 +85,62 @@
 <!--</div>-->
 </br>
     <div class="staffRow">
-            <div class="staffColumn">
-                <div class="staffCard">
-                    <img src="/assets/JeffKaplan.jpg" alt="JeffKaplan" style="width:100%">
-                    <div class="staffContainer">
-                        <h2>Larry Rivida</h2>
-                        <p class="staffTitle">Lead Games Designer</p>
-                        </br>
-                        <p>Larry is our best coder and loves to code
-                        </p>
-                        </br>
-                        <p>Larry.Rivada@spaghetti.com</p>
-                        <p><button class="staffButton">Contact</button></p>
-                    </div>
+        <div class="staffColumn">
+            <div class="staffCard">
+                <img src="/assets/JeffKaplan.jpg" alt="JeffKaplan">
+                <div class="staffContainer">
+                    <h2>Larry Rivida</h2>
+                    <p class="staffTitle">Lead Games Designer</p>
+                    </br>
+                    <p>Larry is our best coder and loves to code
+                    </p>
+                    </br>
+                    <p><a href="Larry.Rivada@spaghetti.com">Larry.Rivada@spaghetti.com</a></p>
+                    </br>
+                    </br>
+                    <p><button class="staffButton">Contact</button></p>
                 </div>
             </div>
+        </div>
 
-            <div class="staffColumn">
-                <div class="staffCard">
-                        <img src="/assets/DripKaplan.jpg" alt="DripKaplan" style="width:100%">
-                    <div class="staffContainer">
-                        <h2>Paul Allen</h2>
-                        <p class="staffTitle">AI Programmer</p>
-                        </br>
-                        <p>Paul creates amazing and very in-depth AI for our games
-                        </p>
-                        </br>
-                        <p>Paul.Allen@spaghetti.com</p>
-    <!--                    <p><a href="Paul.Allen@spaghetti.com">Paul.Allen@spaghetti.com</a></p>-->
-    <!--                    <p><a href="tel:+643116261811">(311) 626-1811</a><br></p>-->
-    <!--                    <p><a>95 Hillpark Drive, Pokeno, Auckland, 2402</a></p>-->
-                        </br>
-                        <p><button class="staffButton">Contact</button></p>
-                    </div>
+        <div class="staffColumn">
+            <div class="staffCard">
+                <img src="/assets/DripKaplan.jpg" alt="DripKaplan">
+                <div class="staffContainer">
+                    <h2>Paul Allen</h2>
+                    <p class="staffTitle">AI Programmer</p>
+                    </br>
+                    <p>Paul creates amazing and very in-depth AI for our games
+                    </p>
+                    </br>
+<!--                    <p>Paul.Allen@spaghetti.com</p>-->
+                    <p><a href="Paul.Allen@spaghetti.com">Paul.Allen@spaghetti.com</a></p>
+                    <!--                    <p><a href="tel:+643116261811">(311) 626-1811</a><br></p>-->
+                    <!--                    <p><a>95 Hillpark Drive, Pokeno, Auckland, 2402</a></p>-->
+                    </br>
+                    </br>
+                    <p><button class="staffButton">Contact</button></p>
                 </div>
             </div>
-
-            <div class="staffColumn">
-                <div class="staffCard">
-                    <img src="/assets/Gaben.jpg" alt="Gaben" class="StaffContactImages">
-                    <div class="staffContainer">
-                        <h2>Trent Maunsell-Beanland</h2>
-                        <p class="staffTitle">Environment Artist</p>
-                        </br>
-                        <p>Trent puts together outstanding environments for our games
-                        </p>
-                        </br>
-                        <p><a href="Trent.Maunsell-Beanland@spaghetti.com">Trent.Maunsell-Beanland@spaghetti.com</a></p>
-                        <p><a href="tel:+643105434357">(310) 543-4357</a><br></p>
-                        <p><a>33 Kahikatea Drive, Melville, Hamilton, 3206</a></p>
-                        <p></p>
-                        <p><button class="staffButton">Contact</button></p>
-                    </div>
+        </div>
+        <div class="staffColumn">
+            <div class="staffCard">
+                <img src="/assets/Gaben.jpg" alt="DripKaplan">
+                <div class="staffContainer">
+                    <h2>Trent Maunsell-Beanland</h2>
+                    <p class="staffTitle">Environment Artist</p>
+                    </br>
+                    <p>Trent puts together outstanding environments for our games
+                    </p>
+                    </br>
+                    <p><a href="Trent.Maunsell-Beanland@spaghetti.com">Trent.Maunsell-Beanland@spaghetti.com</a></p>
+<!--                    <p><a href="tel:+643105434357">(310) 543-4357</a><br></p>-->
+<!--                    <p><a>33 Kahikatea Drive, Melville, Hamilton, 3206</a></p>-->
+                    <p></p>
+                    <p><button class="staffButton">Contact</button></p>
                 </div>
             </div>
+        </div>
     </div>
 </div>
 </br>
