--- a/about.html
+++ b/about.html
@@ -2,9 +2,180 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link rel=" stylesheet" href="stylesheet.css">
+    <title>Amazing wow</title>
 </head>
 <body>
+<header>
 
+    <div class="logo"><a href="index.html"><img src="/assets/logoPNG_DropShadow.png" alt="logo" class="logo"></a></div>
+
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="game.html">Game</a></li>
+        <li><a href="staff.html">Staff</a></li>
+        <li><a href="store.html">Store</a></li>
+        <li><a href="about.html" class="active">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+    </ul>
+</header>
+
+<!-- Body  -->
+<div class="Staff">
+    <div class="topStaff" style="flex-grow: 1; padding: 20px;">
+        </br>
+        <h1>This is our team here at Spaghetti Code</h1><br>
+        <h3>Here at Spaghetti code we design games for you, the fans.<br>
+            Our team knows that no matter what at the end of the day the person who will receive and ultimately review and enjoy our games are the fans, so thats why we design with you in mind and not other corporate shells who want to try to tamper with games and game dev companies reputations for the possibility of a bigger pay.</h3>
+        <div class="nav" style="flex-grow: 8; padding: 20px;"></div>
+    </div>
+    <!--    <div class="bottomStaff">-->
+    <!--        <div class="mainStaff">-->
+    <!--            <img src="/assets/JeffKaplan.jpg" alt="JeffKaplan" class="StaffContactImages">-->
+    <!--        </div>-->
+    <!--        <div class="sideStaff">-->
+    <!--            <div class="columnStaff">-->
+    <!--                <h1>Larry Rivida - Lead Games Designer</h1>-->
+    <!--                <h3>Larry Rivida is our Lead Games Designer and the powerhouse of the team, this man really loves to code, and loves seeing everyones comments on the games as it helps him grow and produce better content</h3>-->
+    <!--            </div>-->
+    <!--            </br>-->
+    <!--            <div class="columnStaff">-->
+    <!--                <h2>Contact Details</h2>-->
+    <!--                <h3>Email: <a href="Larry.Rivada@spaghetti.com">Larry.Rivada@spaghetti.com</a></h3>-->
+    <!--                <h3>Phone Number: <a href="tel:+643115552368">(311) 555-2368</a></h3>-->
+    <!--                <h3>Address: <a>21 Cross Road, Flagstaff, Hamilton, 3206</a></h3>-->
+    <!--            </div>-->
+    <!--        </div>-->
+    <!--        <div class="mainStaff">-->
+    <!--            <img src="/assets/DripKaplan.jpg" alt="DripKaplan" class="StaffContactImages">-->
+    <!--        </div>-->
+    <!--        <div class="sideStaff">-->
+    <!--            <div class="columnStaff">-->
+    <!--                <h1>Paul Allen - AI Programmer</h1>-->
+    <!--                <h3>Paul is our AI Programmer and is quite good at it! He can program almost any type of AI and continues to improve constantly</h3>-->
+    <!--            </div>-->
+    <!--            </br>-->
+    <!--            <div class="columnStaff">-->
+    <!--                <h2>Contact Details</h2>-->
+    <!--                <h3>Email: <a href="Paul.Allen@spaghetti.com">Paul.Allen@spaghetti.com</a><br></h3>-->
+    <!--                    <h3>Phone Number: <a href="tel:+643116261811">(311) 626-1811</a></h3>-->
+    <!--                        <h3>Address: <a>95 Hillpark Drive, Pokeno, Auckland, 2402</a></h3>-->
+    <!--            </div>-->
+    <!--        </div>-->
+    <!--        <div class="staffName">-->
+    <!--            <h2>Trent Maunsell-Beanland -  Environment Artist</h2>-->
+    <!--        </div>-->
+    <!--        <div class="mainStaff">-->
+    <!--            <img src="/assets/Gaben.jpg" alt="Gaben" class="StaffContactImages">-->
+    <!--        </div>-->
+    <!--        <div class="sideStaff">-->
+    <!--            <div class="columnStaff">-->
+    <!--                <h1>Trent Maunsell-Beanland -  Environment Artist</h1>-->
+    <!--                <h3>Trent is our Environment Artist and can produce magical and insane environments for our games to take place on, and doesnt skimp out on minor details or realism</h3>-->
+    <!--            </div>-->
+    <!--            </br>-->
+    <!--            <div class="columnStaff">-->
+    <!--                <h2>Contact Details</h2>-->
+    <!--                <h3>Email: <a href="Trent.Maunsell-Beanland@spaghetti.com">Trent.Maunsell-Beanland@spaghetti.com</a><br></h3>-->
+    <!--                    <h3>Phone Number: <a href="tel:+643105434357">(310) 543-4357</a><br></h3>-->
+    <!--                        <h3>Address: <a>33 Kahikatea Drive, Melville, Hamilton, 3206</a></h3>-->
+    <!--            </div>-->
+    <!--        </div>-->
+    <!--    </div>-->
+    <!--</div>-->
+    <div class="staffRow">
+        <div class="staffColumn">
+            <div class="staffCard">
+                <img src="/assets/JeffKaplan.jpg" alt="JeffKaplan">
+                <div class="staffContainer">
+                    <h2>Larry Rivida</h2>
+                    <p class="staffTitle">Lead Games Designer</p>
+                    </br>
+                    <p>Larry is our best coder and loves to code
+                    </p>
+                    </br>
+                    <p><a href="Larry.Rivada@spaghetti.com">Larry.Rivada@spaghetti.com</a></p>
+                    </br>
+                    </br>
+                    <p><button class="staffButton">Contact</button></p>
+                </div>
+            </div>
+        </div>
+
+        <div class="staffColumn">
+            <div class="staffCard">
+                <img src="/assets/DripKaplan.jpg" alt="DripKaplan">
+                <div class="staffContainer">
+                    <h2>Paul Allen</h2>
+                    <p class="staffTitle">AI Programmer</p>
+                    </br>
+                    <p>Paul creates amazing and very in-depth AI for our games
+                    </p>
+                    </br>
+                    <!--                    <p>Paul.Allen@spaghetti.com</p>-->
+                    <p><a href="Paul.Allen@spaghetti.com">Paul.Allen@spaghetti.com</a></p>
+                    <!--                    <p><a href="tel:+643116261811">(311) 626-1811</a><br></p>-->
+                    <!--                    <p><a>95 Hillpark Drive, Pokeno, Auckland, 2402</a></p>-->
+                    </br>
+                    </br>
+                    <p><button class="staffButton">Contact</button></p>
+                </div>
+            </div>
+        </div>
+        <div class="staffColumn">
+            <div class="staffCard">
+                <img src="/assets/Gaben.jpg" alt="DripKaplan">
+                <div class="staffContainer">
+                    <h2>Trent Maunsell-Beanland</h2>
+                    <p class="staffTitle">Environment Artist</p>
+                    </br>
+                    <p>Trent puts together outstanding environments for our games
+                    </p>
+                    </br>
+                    <p><a href="Trent.Maunsell-Beanland@spaghetti.com">Trent.Maunsell-Beanland@spaghetti.com</a></p>
+                    <!--                    <p><a href="tel:+643105434357">(310) 543-4357</a><br></p>-->
+                    <!--                    <p><a>33 Kahikatea Drive, Melville, Hamilton, 3206</a></p>-->
+                    <p></p>
+                    <p><button class="staffButton">Contact</button></p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+</br>
+<!---->
+<!-- Body  -->
+<footer>
+    <!-- footer section -->
+    <div class="footer">
+        <ul>
+            <li><strong><h2>Download our app</h2></strong></li>
+            <li>Download the spaghetti code app to get daily updates with our new events!</li>
+        </ul>
+        <div id="footer-links">
+            <ul>
+                <li>About</li>
+                <li>Game</li>
+                <li>Event</li>
+                <li>Help Us Improve</li>
+                <li>Store</li>
+            </ul>
+        </div>
+        <div id="footer-sign">
+            <ul>
+                <li><img src="/assets/facebook.png"></li>
+                <li><img src="/assets/twitter.png"></li>
+                <li><img src="/assets/instagram.png"></li>
+                <li><img src="/assets/youtube.png"></li>
+            </ul>
+            <img id="img-container" src="/assets/logoPNG.png">
+            <div id="footer-paragraph">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam nec dui. Quisque nec mauris sit amet elit iaculis pretium sit amet quis magna. Aenean velit odio, elementum in tempus ut, vehicula eu diam. Pellentesque rhoncus aliquam mattis. Ut vulputate eros sed felis sodales nec vulputate justo hendrerit. Vivamus varius pretium ligula, a aliquam odio euismod sit amet. Quisque laoreet sem sit amet orci ullamcorper at ultricies metus viverra. Pellentesque arcu mauris, malesuada quis ornare accumsan, blandit sed diam.</p>
+                <br />
+                <p> &copy; 2022 Spaghetti Code New Zealand, Inc. All rights reserved.</p>
+            </div>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
