--- a/index.html
+++ b/index.html
@@ -6,22 +6,7 @@
         <title>Amazing wow</title>
     </head>
     <body>
-
-    <div class="header-nav">
-        <header>
-
-            <div class="logo"><a href="index.html"><img src="/assets/logoPNG_DropShadow.png" alt="logo" class="logo"></a></div>
-
-            <ul>
-                <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="game.html">Game</a></li>
-                <li><a href="staff.html">Staff</a></li>
-                <li><a href="store.html">Store</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </header>
-    </div>
+    <script src="/assets/JavaScript/header.js"></script>
         <section>
             <img src="assets/parallax/09_Forest.png" id="bush">
             <img src="assets/parallax/08_Forest.png" id="skyblueTree">
