--- a/staff.html
+++ b/staff.html
@@ -6,19 +6,7 @@
     <title>Amazing wow</title>
 </head>
 <body>
-<header>
-
-    <div class="logo"><a href="index.html"><img src="/assets/logoPNG_DropShadow.png" alt="logo" class="logo"></a></div>
-
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="game.html">Game</a></li>
-        <li><a href="staff.html" class="active">Staff</a></li>
-        <li><a href="store.html">Store</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-    </ul>
-</header>
+<script src="/assets/JavaScript/header.js"></script>
 
 <!-- Body  -->
 <div class="Staff">
