--- a/store.html
+++ b/store.html
@@ -8,73 +8,8 @@
     </head>
     <body>
 
-    <header>
-        <div class="logo"><a href="index.html"><img src="/assets/logoPNG_DropShadow.png" alt="logo" class="logo"></a></div>
-
-        <ul>
-            <li><a href="index.html" >Home</a></li>
-            <li><a href="game.html">Game</a></li>
-            <li><a href="staff.html">Staff</a></li>
-            <li><a href="store.html" class="active">Store</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li>
-                <i class='bx bxs-shopping-bag' id="cart-icon"></i>
-                <div class="cart">
-                    <h2 class="cart-title">Your Cart</h2>
-                    <!--Content-->
-                    <div class="cart-content">
-                    </div>
-                    <!--Total-->
-                    <div class="total">
-                        <div class="total-title">Total</div>
-                        <div class="total-price">$0.00</div>
-                    </div>
-                    <!--purchase button-->
-                    <button type="button" class="btn-buy">Complete Purchase</button>
-                    <!--cart close-->
-                    <i class='bx bx-x' id="close-cart"></i>
-                </div>
-            </li>
-            <li><span class="bag-quantity">0</span></li>
-        </ul>
-            </header>
-
-        </ul>
-    </header>
 <!--    <header>-->
-<!--        <div class="container">-->
-<!--            <a href="index.html">-->
-<!--                <img src="/assets/logoPNG.png" alt="logo" class="logo">-->
-<!--            </a>-->
-<!--            <nav>-->
-<!--                <ul>-->
-<!--                    <li><a href="index.html">Home</a></li>-->
-<!--                    <li><a href="game.html">Game</a></li>-->
-<!--                    <li><a href="staff.html">Staff</a></li>-->
-<!--                    <li><a href="store.html">Store</a></li>-->
-<!--                    <li><a href="about.html">About</a></li>-->
-<!--                    <li><a href="contact.html">Contact</a></li>-->
-<!--                    <i class='bx bxs-shopping-bag' id="cart-icon"></i>-->
-<!--                    <span class="bag-quantity">0</span>-->
-<!--                    <div class="cart">-->
-<!--                        <h2 class="cart-title">Your Cart</h2>-->
-<!--                        &lt;!&ndash;Content&ndash;&gt;-->
-<!--                        <div class="cart-content">-->
-<!--                        </div>-->
-<!--                            &lt;!&ndash;Total&ndash;&gt;-->
-<!--                            <div class="total">-->
-<!--                                <div class="total-title">Total</div>-->
-<!--                                <div class="total-price">$0.00</div>-->
-<!--                            </div>-->
-<!--                            &lt;!&ndash;purchase button&ndash;&gt;-->
-<!--                            <button type="button" class="btn-buy">Complete Purchase</button>-->
-<!--                            &lt;!&ndash;cart close&ndash;&gt;-->
-<!--                            <i class='bx bx-x' id="close-cart"></i>-->
-<!--                        </div>-->
-<!--                 </ul>-->
-<!--            </nav>-->
-<!--        </div>-->
+    <script src="/assets/JavaScript/header.js"></script>
 <!--    </header>-->
 
     <!-- Body  -->
@@ -314,6 +249,6 @@
                 </div>
             </div>
         </footer>
-        <script src="/assets/store.js"></script>
+        <script src="/assets/JavaScript/store.js"></script>
     </body>
 </html>
